--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">test</string>
+    <string name="close">close Drawer</string>
+    <string name="open">open</string>
 </resources>
